<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/camera_ui_container"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Camera control and gallery buttons -->
    <ImageButton
        android:id="@+id/camera_switch_button"
        android:layout_width="@dimen/round_button_medium"
        android:layout_height="@dimen/round_button_medium"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_small"
        android:padding="@dimen/spacing_small"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/switch_camera_button_alt" />

    <ImageButton
        android:id="@+id/camera_capture_button"
        android:layout_width="@dimen/round_button_large"
        android:layout_height="@dimen/round_button_large"
        android:layout_marginBottom="@dimen/shutter_button_margin"
        android:scaleType="fitCenter"
        android:background="@drawable/ic_shutter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/capture_button_alt" />

    <ImageButton
        android:id="@+id/photo_view_button"
        android:layout_width="@dimen/round_button_medium"
        android:layout_height="@dimen/round_button_medium"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_small"
        android:padding="@dimen/spacing_large"
        android:scaleType="fitCenter"
        android:background="@drawable/ic_outer_circle"
        app:srcCompat="@drawable/ic_photo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/gallery_button_alt" />

    <ImageButton
        android:id="@+id/flash_mode_button"
        android:layout_width="@dimen/round_button_medium"
        android:layout_height="@dimen/round_button_medium"
        android:background="@drawable/ic_outer_circle"
        android:contentDescription="@string/gallery_button_alt"
        android:padding="@dimen/spacing_large"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/photo_view_button"
        app:layout_constraintStart_toStartOf="@+id/photo_view_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014"
        app:srcCompat="@drawable/ic_flash_off_white_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>